--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#4F736D",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3203/3203693.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/186/186192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3203/3203693.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/186/186192.png",
       "sizes": "512x512",
       "type": "image/png"
     }
